--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ font-family: 'Indie Flower', cursive;
             <a class="navbar-brand"><h1 style="text-transform: uppercase; font-size: 25px;">This is my first website!</h1></a>
           </div>
     <ul class="nav">
-      <li class="nav-item"><a class="nav-link" href="/C:\Users\Marek\Desktop\learningjava\Test Site\index.html"><i class="fas fa-home"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="https://github.com/emibass/emibass.github.io/edit/main/contact.html"><i class="fas fa-home"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/swingbycoffeevan/?hl=en"><i class="fas fa-coffee"></i></a></li>
-      <li clas='nav-item'><a class="nav-link" href="/C:\Users\Marek\Desktop\learningjava\Test Site\contact.html"><i class="fas fa-envelope"></i></a></li>
+      <li clas='nav-item'><a class="nav-link"  href="https://github.com/emibass/emibass.github.io/edit/main/index.html"><i class="fas fa-envelope"></i></a></li>
      </ul>
         </div>
       </nav>
