--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ font-family: 'Indie Flower', cursive;
       <li class="nav-item"><a class="nav-link" href="https://emibass.github.io"><i class="fas fa-home"></i></a></li>
     
       <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/swingbycoffeevan/?hl=en"><i class="fas fa-coffee"></i></a></li>
-      <li clas='nav-item'><a class="nav-link"  href="https://emibass/emibass.github.io/contact.html"><i class="fas fa-envelope"></i></a></li>
+      <li clas='nav-item'><a class="nav-link"  href="https://emibass.github.io/contact.html"><i class="fas fa-envelope"></i></a></li>
      </ul>
         </div>
       </nav>
