--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ font-family: 'Indie Flower', cursive;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
-  width:600px; 
+  width:400px; 
   height:fit-content; 
-  padding: 50px; 
+  padding: 20px; 
   border: 1px solid #1E90FF;
   box-sizing: content-box; 
   box-shadow: 10px 10px #dcdcdc;
@@ -77,10 +77,9 @@ font-family: 'Indie Flower', cursive;
             <a class="navbar-brand"><h1 style="text-transform: uppercase; font-size: 25px;">This is my first website!</h1></a>
           </div>
     <ul class="nav">
-      <li class="nav-item"><a class="nav-link" href="https://emibass.github.io"><i class="fas fa-home"></i></a></li>
-    
+      <li class="nav-item"><a class="nav-link" href="emibass.github.io"><i class="fas fa-home"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/swingbycoffeevan/?hl=en"><i class="fas fa-coffee"></i></a></li>
-      <li clas='nav-item'><a class="nav-link"  href="https://github.com/emibass/emibass.github.io/main/contact.html"><i class="fas fa-envelope"></i></a></li>
+      <li clas='nav-item'><a class="nav-link" href="https://emibass.github.io/contact"><i class="fas fa-envelope"></i></a></li>
      </ul>
         </div>
       </nav>
