--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@ font-family: 'Indie Flower', cursive;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
-  width:600px; 
+  width:400px; 
   height:fit-content; 
-  padding: 50px; 
+  padding: 20px; 
   border: 1px solid #1E90FF;
   box-sizing: content-box; 
   box-shadow: 10px 10px #dcdcdc;
@@ -80,13 +80,14 @@ font-family: 'Indie Flower', cursive;
     <ul class="nav">
       <li class="nav-item"><a class="nav-link" href="https://emibass.github.io"><i class="fas fa-home"></i></a></li>
       <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/swingbycoffeevan/?hl=en"><i class="fas fa-coffee"></i></a></li>
-      <li clas='nav-item'><a class="nav-link" https://github.com/emibass/emibass.github.io/main/contact.html"><i class="fas fa-envelope"></i></a></li>
+      <li clas='nav-item'><a class="nav-link" href="https://emibass.github.io/contact"><i class="fas fa-envelope"></i></a></li>
      </ul>
         </div>
       </nav>
 
   <div class="container">
-    <p>You can email me using the button below <iframe src="https://giphy.com/embed/MZMGlrOKUjEwGCkNER" width="20" height="20" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><a href="https://giphy.com/gifs/thekluxeboutique-arrow-pointing-kluxe-MZMGlrOKUjEwGCkNER"></a></p>
+    <p>You can email me using the button below 
+      <iframe src="https://giphy.com/embed/MZMGlrOKUjEwGCkNER" width="20" height="20" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><a href="https://giphy.com/gifs/thekluxeboutique-arrow-pointing-kluxe-MZMGlrOKUjEwGCkNER"></a></p>
 
 
 	<button type="submit" class="btn btn-dark btn-block">
