--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ font-size: 18px;
   background-color: black;
   background-image: url("contact_image_640p.jpg");
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: center;
 
 }
 h1 {
