--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@ font-family: 'Indie Flower', cursive;
   justify-content: center;
   
 }
+  .container-bottom {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  width:300px; 
+  height:fit-content; 
+  padding: 20px; 
+  border: 1px solid #1E90FF;
+  box-sizing: content-box; 
+  box-shadow: 10px 10px #dcdcdc;
+  background-color: black;
+  opacity: 0.8;
+  justify-content: center;
+  }
 
 </style>
 
@@ -78,7 +92,7 @@ font-family: 'Indie Flower', cursive;
           </div>
     <ul class="nav">
       <li class="nav-item"><a class="nav-link" href="emibass.github.io"><i class="fas fa-home"></i></a></li>
-      <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/swingbycoffeevan/?hl=en"><i class="fas fa-coffee"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="https://www.swingby.co.nz"><i class="fas fa-coffee"></i></a></li>
       <li clas='nav-item'><a class="nav-link" href="https://emibass.github.io/contact"><i class="fas fa-envelope"></i></a></li>
      </ul>
         </div>
@@ -89,21 +103,26 @@ font-family: 'Indie Flower', cursive;
       <div class="container">
        
         <h2>Hi! I'm Emilia.</h2>
-        <p> At the time of writing, I'm 37 and married with children (Leon&nbsp4, Olaf&nbsp1).</p>
+        <p> At the time of writing (August 2021), I'm 37 and married with children (Leon&nbsp4, Olaf&nbsp1).</p>
         <p> I lived in many places, worked different jobs and decided, yet again, that it's time to learn something new.</p>
         <p> Can I learn a coding language? Will I be able to use it succesfully?</p>
         <p> So let's see if I can make this site accesible, functional and pretty.</p>
         </div>
   
  
-      <div class="container">
+      <div class="container-bottom">
       <h2>
         About me ...
       </h2>
         <p>I find it hard to write about myself.</p>
-        <p> ... but I do love coffee and bread and my love of coffee made me start a&nbspbusiness: <a href="https://www.facebook.com/swingbycoffeevan/">Swing&nbspBy&nbspCoffee&nbspVan</a>.</p>
+        <p> ... but I do love coffee and bread and my love of coffee made me start a&nbspbusiness: <a href="https://www.swingby.co.nz/">Swing&nbspBy&nbspCoffee&nbspVan</a>.</p>
         <p> Go on, check it out if you're interested.</p>
       </div>
+      <div class="container-bottom">
+        <h2>May 2022 update</h2>
+        <p>Still enjoying the journey.</p>
+        <p>Here you will find my latest little project: <a href="https://notes-byemi.herokuapp.com/">Notes&nbspto&nbspmyself</a>.</p>
+  </div>
 </div>
      
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark bottom justify-content-center">
